# Brick-Breaker

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
include/: Audio.h  BrickManager.h  ButtonContainer.h  Collision.h  CollisionVolume.h  Entity.h  EventSystem.h  Game.h  HashTable.h  Keyboard.h  MathUtils.h  Player.h  Prime.h  Renderer.h  Resources.h  Screens.h  Text.h  Types.h  Utilities.h  Utils.h
src/: Audio.c  BrickManager.c  ButtonContainer.c  Collision.c  CollisionVolume.c  Ending.c  Entity.c  Game.c  GameOver.c  Gameplay.c  HashTable.c  Keyboard.c  Menu.c  Options.c  Prime.c  Renderer.c  Text.c  Title.c  Utils.c  main.c
src/Gameplay/: BrickManager.c  Entity.c  Game.c
src/Scenes/: Ending.c  Gameplay.c  Menu.c  Options.c  Pause.c  Title.c
src/Screens/: Gameplay.c  Menu.c
src/Utilities/: Audio.c  ButtonContainer.c  Collision.c  EventSystem.c  Keyboard.c  Renderer.c  Text.c  Utilities.c  Utils.c
